fixed map align

--- a/foo.styl
+++ b/foo.styl
@@ -87,6 +87,8 @@ iframe
   box-shadow: 0 0 .5em rgba(0,0,0,0.1)
   border: solid .5em #fff
   height: varLineHeight*7
+  width: 100%
+  min-width:316px
 
 button
   font-size:1em
@@ -167,4 +169,3 @@ h2:last-child
   h1
     width:100%
     text-align:center
-    
